fix alert right float breaking on mobile

--- a/www/less/base.less
+++ b/www/less/base.less
@@ -153,6 +153,12 @@ blockquote {
 	}
 }
 
+@media (max-width: @screen-sm) {
+  .alert .pull-right {
+	float: none !important;
+	padding-left: 1em;
+  }
+}
 
 .mark,
 mark {
